# ai-notes

./: .env.example  .gitignore  README.md  docker-compose.yml
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  README.md  styles.css
doc/: 2026-06-16-manual-acceptance-checklist.md  2026-06-16-search-chat-test-cases.md  2026-06-17-deployment-and-handoff.md  README.md
doc/api/: README.md  ai-chat.md  ai-search.md  ai-tag.md  common.md  notes.md  openapi.yaml
doc/architecture/: README.md
doc/plan/: 2026-06-10-spec-note-embedding-pipeline.md  2026-06-16-spec-ai-tag-gemini-implementation.md  README.md  (+4 more)
infra/: README.md
server/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: README.md  env.py
server/alembic/versions/: 20260609_0001_create_notes_and_note_chunks.py  20260611_0002_add_note_chunk_metadata.py  20260612_0003_convert_note_chunks_embedding_to_pgvector.py
server/app/: README.md  __init__.py  config.py  database.py  main.py
server/app/models/: __init__.py  note.py  note_chunk.py
server/app/repositories/: note_repository.py
server/app/routers/: ai.py  notes.py
server/app/schemas/: ai.py  common.py  note.py
server/app/services/: chat_service.py  chunking_service.py  embedding_service.py  note_service.py  search_service.py  tagging_service.py
server/tests/: README.md  conftest.py  test_ai_api.py  test_note_pipeline.py  test_notes_api.py  test_pgvector_schema.py
services/: README.md
skills/: README.md
(+26 files in other folders)
