[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-notes-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.1,<2",
  "fastapi>=0.115.0,<1",
  "pgvector>=0.4.2,<1",
  "pydantic>=2.7.0,<3",
  "psycopg[binary]>=3.2.0,<4",
  "sqlalchemy>=2.0.30,<3",
  "uvicorn>=0.30.0,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1",
  "pytest>=8.2.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
